--- a/style.css
+++ b/style.css
@@ -54,12 +54,24 @@ body {
 h1,
 h2,
 h3,
-strong {
+strong,
+.credit {
   font-family: "Yanone Kaffeesatz";
   font-weight: normal;
 }
 strong {
   font-size: 2em;
+}
+.credit {
+  display: block;
+  color: #aaa;
+  text-decoration: none;
+  font-size: 0.75em;
+  text-align: center;
+  padding: 0.25em;
+}
+.credit a {
+  color: #aaa;
 }
 .remark-inline-code,
 .remark-code-line {
@@ -77,7 +89,7 @@ strong {
 
 img {
   display: block;
-  width: 80%;
+  width: 100%;
 }
 
 .overlay p {
@@ -88,11 +100,11 @@ img {
   box-shadow: 0 0 0.2em rgba(255,255,255,0.8);
 }
 
-.overlay img {
+
+.overlay p:has( img) {
   z-index: 0;
-  width: 80%;
+  width: 100%;
   float: right;
-  margin-top: -10%;
   margin-bottom: -100%;
 }
 
