Fix nojs with :target instead of :focus

--- a/examples/week_6/nojs/static/style.css
+++ b/examples/week_6/nojs/static/style.css
@@ -46,10 +46,10 @@ h2 {
   display: none;
 }
 
-.animal:focus .happy {
+.animal:target .happy {
   display: block;
 }
 
-.animal:focus .sad {
+.animal:target .sad {
   display: none;
 }
