Pick a code background visible on the projectors

--- a/lecture_notes/styles/style.css
+++ b/lecture_notes/styles/style.css
@@ -146,7 +146,7 @@ h3,
 .remark-inline-code,
 .remark-code-line {
   font-family: "Ubuntu Mono";
-  background-color: #e5f1ff;
+  background-color: lightblue;
   padding: 5px;
 }
 .agenda h1 {
