Set max sizes for images

--- a/lecture_notes/styles/style.css
+++ b/lecture_notes/styles/style.css
@@ -168,6 +168,8 @@ img {
   display: block;
   width: max-content;
   height: max-content;
+  max-width: 90%;
+  max-height: 90%;
 }
 .overlay p {
   position: relative;
