--- a/lecture_notes/styles/style.css
+++ b/lecture_notes/styles/style.css
@@ -171,6 +171,10 @@ img {
   max-width: 80%;
   max-height: 80%;
 }
+.half img {
+  max-width: 40%;
+  max-height: 40%;
+}
 .overlay p {
   position: relative;
   z-index: 1;
